# td

./: README.md  pyproject.toml
td/: td.py
td/utils/: apputils.py  checks.py  config.py  fileutils.py  lists.py  tasks.py  workspaces.py
