[tool.poetry]
name = "td"
packages = [{ include = "td" }]
version = "0.1.0"
description = "A CLI Todo list app"
authors = ["Hassan-Ibrahim-1 <hassanibrahimasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"
inquirer = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
td = "td.td:app"
